--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Couples Date: The Couples & Unicorns Dating Site</title>
+    <title>TG Lovers : connect with transgender singles in your city </title>
     <style>
         * { margin:0; padding:0; box-sizing:border-box; font-family:'Arial',sans-serif; }
         body { background:#f8c1d9; color:#5a3d5c; line-height:1.6; }
@@ -51,12 +51,10 @@
 
 <section class="hero" id="home">
     <div class="container">
-        <h2>The Community for Couples and Unicorn</h2>
+        <h2>The Community for Trans Singles & TG Lovers </h2>
         <p>
-            Couples-Date makes it easy for unicorns and open-minded couples to find real, trustworthy connections in a secure environment. 
-            Enjoy verified accounts, private messaging, and a platform built specifically for couple dating, polyamorous relationships, and unicorn matchmaking. 
-            Here, you stay in full control as you explore new experiences with like-minded partners. Whether you want a meaningful three-way connection, casual couple dating, or long-term open relationship possibilities, 
-            Couples-Date provides a welcoming, safe community for honest and genuine interaction.
+           Meet amazing transgender women and men looking for real connection!
+Ready to discover trans singles who want romance and meaningful chemistry? Join now for free, connect instantly, and start meeting incredible people today!
         </p>
 
         <a href="https://www.bicupid.com/registerStep1?tid=af100017349_cd" class="btn">Join Now</a>
@@ -78,7 +76,7 @@
                 <a href="https://www.bicupid.com/registerStep1?tid=af100017349_cd" style="text-decoration:none;color:inherit;">
                     <div class="feature-icon">💖</div>
                     <h3>First Date Ideas</h3>
-                    <p>Carefully curated ideas helping couples and unicorns connect genuinely and naturally from the very first moment.</p>
+                    <p>Carefully curated ideas helping Trans Singles and Lovers connect genuinely and naturally from the very first moment.</p>
                 </a>
             </div>
 
@@ -102,7 +100,7 @@
 </section>
 
 <footer>
-    <p><a href="https://www.bicupid.com/registerStep1?tid=af100017349_cd" style="color:white;text-decoration:none;">© 2025 Couples-Date.com | All rights reserved.</a></p>
+    <p><a href="https://www.bicupid.com/registerStep1?tid=af100017349_cd" style="color:white;text-decoration:none;">© 2025 TGLovers.com | All rights reserved.</a></p>
 </footer>
 
 </body>
