--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TG Lovers : connect with transgender singles in your city </title>
+    <title>TG Lovers: Meet Trans Girls & Transgender Women</title>
     <style>
         * { margin:0; padding:0; box-sizing:border-box; font-family:'Arial',sans-serif; }
         body { background:#f8c1d9; color:#5a3d5c; line-height:1.6; }
@@ -15,17 +15,26 @@
         nav ul li { margin-left:25px; }
         nav ul li a { text-decoration:none; color:#5a3d5c; font-weight:600; position:relative; transition:0.3s; }
         nav ul li a:hover { color:#e84393; }
+
+        /* HERO */
         .hero { height:75vh; padding:100px 0 60px; text-align:center; position:relative; overflow:hidden; display:flex; align-items:flex-end; justify-content:center; }
-        .hero::before { content:''; position:absolute; top:0; left:0; width:100%; height:100%; background-image:url('./transsingles.jpeg'); background-size:cover; background-position:center; filter:brightness(0.65); z-index:1; }
+        .hero::before { content:''; position:absolute; top:0; left:0; width:100%; height:100%; background-image:url('./couples-dating-unicorn.jpeg'); background-size:cover; background-position:center; filter:brightness(0.65); z-index:1; }
         .hero .container { position:relative; z-index:2; }
         .hero h2 { font-size:48px; margin-bottom:20px; color:white; }
         .hero p { font-size:20px; max-width:850px; margin:0 auto 30px; color:white; }
-        .btn { display:inline-block; padding:12px 30px; border-radius:30px; color:white; background:linear-gradient(45deg,#e84393,#6c5ce7); text-decoration:none; font-weight:bold; }
+
+        .btn { display:inline-block; padding:12px 30px; border-radius:30px; text-decoration:none; font-weight:bold; }
+
+        /* New black buttons */
+        .app-buttons { margin-top:40px; display:flex; justify-content:center; gap:25px; }
+        .app-btn { background:black; color:white; padding:15px 40px; border-radius:30px; text-decoration:none; font-weight:bold; font-size:18px; display:inline-block; min-width:180px; text-align:center; }
+
         .features { padding:80px 0; background-color:rgba(255,255,255,0.7); }
         .section-title { text-align:center; font-size:36px; margin-bottom:50px; font-weight:700; }
         .features-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr)); gap:30px; }
         .feature-card { background:white; border-radius:15px; padding:30px; text-align:center; box-shadow:0 5px 15px rgba(0,0,0,0.1); }
         .feature-icon { width:80px; height:80px; margin:0 auto 20px; display:flex; align-items:center; justify-content:center; font-size:40px; background:#ffe3f0; border-radius:50%; color:#e84393; }
+
         footer { background:linear-gradient(45deg,#5a3d5c,#3d2a4d); color:white; padding:40px 0; text-align:center; }
     </style>
 </head>
@@ -36,13 +45,13 @@
     <div class="container">
         <div class="header-content">
             <div class="logo">
-                <h1><a href="https://www.bicupid.com/registerStep1?tid=af100017349_cd" style="text-decoration:none;color:inherit;">TG Lovers</a></h1>
+                <h1><a href="https://www.bicupid.com/registerStep1?tid=af100017349_lovers" style="text-decoration:none;color:inherit;">TG Lovers</a></h1>
             </div>
             <nav>
                 <ul>
-                    <li><a href="https://www.bicupid.com/registerStep1?tid=af100017349_cd">Home</a></li>
-                    <li><a href="https://www.bicupid.com/registerStep1?tid=af100017349_cd">Login</a></li>
-                    <li><a href="https://www.bicupid.com/registerStep1?tid=af100017349_cd">About Us</a></li>
+                    <li><a href="https://www.bicupid.com/registerStep1?tid=af100017349_lovers">Home</a></li>
+                    <li><a href="https://www.bicupid.com/registerStep1?tid=af100017349_lovers">Login</a></li>
+                    <li><a href="https://www.bicupid.com/registerStep1?tid=af100017349_lovers">About Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -51,37 +60,37 @@
 
 <section class="hero" id="home">
     <div class="container">
-        <h2>The Community for Trans Singles & TG Lovers </h2>
+        <h2>The TG Community for Trans Lovers</h2>
         <p>
-           Meet amazing transgender women and men looking for real connection!
-Ready to discover trans singles who want romance and meaningful chemistry? Join now for free, connect instantly, and start meeting incredible people today!
+           Meet amazing transgender women and men looking for real connection! Ready to discover trans singles who want romance and meaningful chemistry? Join now for free, connect instantly, and start meeting incredible people today! 
         </p>
 
-        <a href="https://www.bicupid.com/registerStep1?tid=af100017349_cd" class="btn">Join Now</a>
-
-        <div style="margin-top:25px; display:flex; justify-content:center; gap:20px;">
-            <a href="#" class="btn" style="padding:10px 25px; font-size:16px;">iOS App</a>
-            <a href="#" class="btn" style="padding:10px 25px; font-size:16px;">Android App</a>
-        </div>
+        <a href="https://www.bicupid.com/registerStep1?tid=af100017349_lovers" class="btn" style="background:linear-gradient(45deg,#e84393,#6c5ce7); color:white;">Join Now</a>
 
     </div>
 </section>
 
+<!-- MOVED APP BUTTONS BELOW HERO SECTION -->
+<div class="app-buttons">
+    <a href="https://www.bicupid.com/registerStep1?tid=af100017349_lovers" class="app-btn">iOS App</a>
+    <a href="https://www.bicupid.com/registerStep1?tid=af100017349_lovers" class="app-btn">Android App</a>
+</div>
+
 <section class="features" id="features">
     <div class="container">
-        <h2 class="section-title"><a href="https://www.bicupid.com/registerStep1?tid=af100017349_cd" style="text-decoration:none;color:inherit;">Our Features</a></h2>
+        <h2 class="section-title"><a href="https://www.bicupid.com/registerStep1?tid=af100017349_lovers" style="text-decoration:none;color:inherit;">Our Features</a></h2>
 
         <div class="features-grid">
             <div class="feature-card">
-                <a href="https://www.bicupid.com/registerStep1?tid=af100017349_cd" style="text-decoration:none;color:inherit;">
+                <a href="https://www.bicupid.com/registerStep1?tid=af100017349_lovers" style="text-decoration:none;color:inherit;">
                     <div class="feature-icon">💖</div>
                     <h3>First Date Ideas</h3>
-                    <p>Carefully curated ideas helping Trans Singles and Lovers connect genuinely and naturally from the very first moment.</p>
+                    <p>Carefully curated ideas helping trans singles & lovers connect genuinely and naturally from the very first moment.</p>
                 </a>
             </div>
 
             <div class="feature-card">
-                <a href="https://www.bicupid.com/registerStep1?tid=af100017349_cd" style="text-decoration:none;color:inherit;">
+                <a href="https://www.bicupid.com/registerStep1?tid=af100017349_lovers" style="text-decoration:none;color:inherit;">
                     <div class="feature-icon">🛡️</div>
                     <h3>Verified Profiles</h3>
                     <p>Every member is verified through a multi-step system to ensure authenticity and safety for all users.</p>
@@ -89,7 +98,7 @@ Ready to discover trans singles who want romance and meaningful chemistry? Join 
             </div>
 
             <div class="feature-card">
-                <a href="https://www.bicupid.com/registerStep1?tid=af100017349_cd" style="text-decoration:none;color:inherit;">
+                <a href="https://www.bicupid.com/registerStep1?tid=af100017349_lovers" style="text-decoration:none;color:inherit;">
                     <div class="feature-icon">✨</div>
                     <h3>Smart Match System</h3>
                     <p>Advanced matching tailored to compatibility, intentions, lifestyle, and relationship dynamics.</p>
@@ -100,7 +109,7 @@ Ready to discover trans singles who want romance and meaningful chemistry? Join 
 </section>
 
 <footer>
-    <p><a href="https://www.bicupid.com/registerStep1?tid=af100017349_cd" style="color:white;text-decoration:none;">© 2025 TGLovers.com | All rights reserved.</a></p>
+    <p><a href="https://www.bicupid.com/registerStep1?tid=af100017349_lovers" style="color:white;text-decoration:none;">© 2025 tglovers.com | All rights reserved.</a></p>
 </footer>
 
 </body>
