--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TG Lovers: Meet Trans Girls & Transgender Women</title>
+    <title>TG Romance: Meet Trans Girls & Transgender Women</title>
     <style>
         * { margin:0; padding:0; box-sizing:border-box; font-family:'Arial',sans-serif; }
         body { background:#f8c1d9; color:#5a3d5c; line-height:1.6; }
@@ -45,7 +45,7 @@
     <div class="container">
         <div class="header-content">
             <div class="logo">
-                <h1><a href="https://www.bicupid.com/registerStep1?tid=af100017352_lovers" style="text-decoration:none;color:inherit;">TG Lovers</a></h1>
+                <h1><a href="https://www.bicupid.com/registerStep1?tid=af100017352_lovers" style="text-decoration:none;color:inherit;">TG Romance</a></h1>
             </div>
             <nav>
                 <ul>
