--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     <div class="container">
         <div class="header-content">
             <div class="logo">
-                <h1><a href="https://www.bicupid.com/registerStep1?tid=af100017352_RR" style="text-decoration:none;color:inherit;">TG Romance</a></h1>
+                <h1><a href="https://www.bicupid.com/registerStep1?tid=af100017352_lovers" style="text-decoration:none;color:inherit;">TG Romance</a></h1>
             </div>
             <nav>
                 <ul>
-                    <li><a href="https://www.bicupid.com/registerStep1?tid=af100017352_RR">Home</a></li>
-                    <li><a href="https://www.bicupid.com/registerStep1?tid=af100017352_RR">Login</a></li>
-                    <li><a href="https://www.bicupid.com/registerStep1?tid=af100017352_RR">About Us</a></li>
+                    <li><a href="https://www.bicupid.com/registerStep1?tid=af100017352_lovers">Home</a></li>
+                    <li><a href="https://www.bicupid.com/registerStep1?tid=af100017352_lovers">Login</a></li>
+                    <li><a href="https://www.bicupid.com/registerStep1?tid=af100017352_lovers">About Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -65,24 +65,24 @@
            Meet amazing transgender women and men looking for real connection! Ready to discover trans singles who want romance and meaningful chemistry? Join now for free, connect instantly, and start meeting incredible people today! 
         </p>
 
-        <a href="https://www.bicupid.com/registerStep1?tid=af100017352_RR" class="btn" style="background:linear-gradient(45deg,#e84393,#6c5ce7); color:white;">Join Now</a>
+        <a href="https://www.bicupid.com/registerStep1?tid=af100017352_lovers" class="btn" style="background:linear-gradient(45deg,#e84393,#6c5ce7); color:white;">Join Now</a>
 
     </div>
 </section>
 
 <!-- MOVED APP BUTTONS BELOW HERO SECTION -->
 <div class="app-buttons">
-    <a href="https://app.appsflyer.com/id1481809362?pid=af100017352_RR" class="app-btn">iOS App</a>
-    <a href="https://app.appsflyer.com/com.bi.bicupid?pid=af100017352_RR" class="app-btn">Android App</a>
+    <a href="https://app.appsflyer.com/id1481809362?pid=af100017352_lovers" class="app-btn">iOS App</a>
+    <a href="https://app.appsflyer.com/com.bi.bicupid?pid=af100017352_lovers" class="app-btn">Android App</a>
 </div>
 
 <section class="features" id="features">
     <div class="container">
-        <h2 class="section-title"><a href="https://www.bicupid.com/registerStep1?tid=af100017352_RR" style="text-decoration:none;color:inherit;">Our Features</a></h2>
+        <h2 class="section-title"><a href="https://www.bicupid.com/registerStep1?tid=af100017352_lovers" style="text-decoration:none;color:inherit;">Our Features</a></h2>
 
         <div class="features-grid">
             <div class="feature-card">
-                <a href="https://www.bicupid.com/registerStep1?tid=af100017352_RR" style="text-decoration:none;color:inherit;">
+                <a href="https://www.bicupid.com/registerStep1?tid=af100017352_lovers" style="text-decoration:none;color:inherit;">
                     <div class="feature-icon">💖</div>
                     <h3>First Date Ideas</h3>
                     <p>Carefully curated ideas helping trans singles & lovers connect genuinely and naturally from the very first moment.</p>
@@ -90,7 +90,7 @@
             </div>
 
             <div class="feature-card">
-                <a href="https://www.bicupid.com/registerStep1?tid=af100017352_RR" style="text-decoration:none;color:inherit;">
+                <a href="https://www.bicupid.com/registerStep1?tid=af100017352_lovers" style="text-decoration:none;color:inherit;">
                     <div class="feature-icon">🛡️</div>
                     <h3>Verified Profiles</h3>
                     <p>Every member is verified through a multi-step system to ensure authenticity and safety for all users.</p>
@@ -98,7 +98,7 @@
             </div>
 
             <div class="feature-card">
-                <a href="https://www.bicupid.com/registerStep1?tid=af100017352_RR" style="text-decoration:none;color:inherit;">
+                <a href="https://www.bicupid.com/registerStep1?tid=af100017352_lovers" style="text-decoration:none;color:inherit;">
                     <div class="feature-icon">✨</div>
                     <h3>Smart Match System</h3>
                     <p>Advanced matching tailored to compatibility, intentions, lifestyle, and relationship dynamics.</p>
@@ -109,7 +109,7 @@
 </section>
 
 <footer>
-    <p><a href="https://www.bicupid.com/registerStep1?tid=af100017352_RR" style="color:white;text-decoration:none;">© 2025 tgromance.com | All rights reserved.</a></p>
+    <p><a href="https://www.bicupid.com/registerStep1?tid=af100017352_lovers" style="color:white;text-decoration:none;">© 2025 tgromance.com | All rights reserved.</a></p>
 </footer>
 
 </body>
